syntax = "proto3";

import "go_serv/extension.proto";
import "net/crypto.proto";

package go_serv.net;

//..
message Session {
  message Request {
    uint32 lifetime = 1; // Session lifetime in seconds
    oneof key_exch_algo {
      Crypto_PubKeyExchange.DiffieHellman dh = 10;
      Crypto_PubKeyExchange.ECDH ecdh = 11;
      Crypto_PubKeyExchange.Rsa rsa = 12;
      Crypto_PubKeyExchange.Psk psk = 13;
    };
    Crypto_AEADCipher block_cypher = 20;
    uint32 nonce_length = 30;
  }
  message Response {
    option (.go_serv.enc_off) = true;
    bytes nonce = 1;
    optional bytes pub_key = 2; // Server's public key
  }
}